change the grid and try to fix the not showing the picture on single movies

--- a/movies-demo/src/App.css
+++ b/movies-demo/src/App.css
@@ -16,7 +16,7 @@
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-rows: repeat(1, 1fr);
 }
 
 .imageButton {
